--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -358,6 +358,10 @@ p {
     background-image: linear-gradient(90deg, rgb(175, 4, 5) 0%, rgb(234, 41, 42) 99%);
 }
 
+.gradient-7 {
+    background-image: linear-gradient(0deg, rgb(12, 12, 12) 0%, rgb(54, 53, 53) 100%);
+}
+
 #wrapper {
     overflow: hidden !important;
     position: relative;
@@ -491,6 +495,7 @@ input[type="color"]::placeholder {
 /* Scroll Top
 -------------------------------------------------------------- */
 #scroll-top {
+    box-shadow: 0px 8px 27px 0px rgba(0, 0, 0, 0.2);
     position: fixed;
     display: block;
     width: 45px;
@@ -510,7 +515,8 @@ input[type="color"]::placeholder {
     visibility: hidden;
     cursor: pointer;
     overflow: hidden;
-    border: 1px solid $white;
+    border: 1px solid $color-main;
+    background-color: $color-main;
 }
 
 #scroll-top.show {
@@ -539,7 +545,7 @@ input[type="color"]::placeholder {
     content: "\f077";
     font-family: "Font Awesome 5 Pro";
     font-size: 16px;
-    color: #ffffff;
+    color: $white;
     font-weight: 400;
 }
 
@@ -567,9 +573,67 @@ input[type="color"]::placeholder {
     z-index: 99999999999;
     display: block;
     overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+}
+
+.preload-logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 180px;
+    height: 50px;
+    z-index: 100;
+    margin: -25px 0 0 -90px;
+    background: #ffffff;
+    background-image: url("./../../assets/images/logo/preload.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+    animation: preload 1.2s linear infinite alternate;
+    -webkit-animation-name: bounceIn;
+    animation-name: bounceIn;
+}
+
+@keyframes bounceIn {
+
+    from,
+    20%,
+    40%,
+    60%,
+    80%,
+    to {
+        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+
+    0% {
+        opacity: 0;
+        transform: scale3d(0.3, 0.3, 0.3);
+    }
+
+    20% {
+        transform: scale3d(1.1, 1.1, 1.1);
+    }
+
+    40% {
+        transform: scale3d(0.9, 0.9, 0.9);
+    }
+
+    60% {
+        opacity: 1;
+        transform: scale3d(1.03, 1.03, 1.03);
+    }
+
+    80% {
+        transform: scale3d(0.97, 0.97, 0.97);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale3d(1, 1, 1);
+    }
+}
+
+.bounceIn {
+    animation-name: bounceIn;
 }
 
 @keyframes lod {
@@ -596,6 +660,10 @@ input[type="color"]::placeholder {
 
     &.pt-112 {
         padding-top: 112px;
+    }
+
+    &.pb-62 {
+        padding-bottom: 62px ;
     }
 
     &.pt-158 {
